k8s/01-app-dashboard-v3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smoketest-v1
  namespace: kube-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: smoketest-v1
  template:
    metadata:
      labels:
        app: smoketest-v1
    spec:
      containers:
        - name: smoketest-v1
          image: uhub.service.ucloud.cn/entropypool/smoketest-v1:latest
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: smoketest-v1
  namespace: kube-system
spec:
  ports:
    - name: api
      port: 80
      targetPort: 80
  selector:
    app: smoketest-v1
