k8s/01-vue-template-webui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-template
  namespace: kube-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dashboard-template
  template:
    metadata:
      labels:
        app: dashboard-template
    spec:
      containers:
        - name: dashboard-template
          image: uhub.service.ucloud.cn/entropypool/dashboard-template:latest
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-template
  namespace: kube-system
spec:
  ports:
    - name: api
      port: 80
      targetPort: 80
  selector:
    app: dashboard-template
