k8s/02-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: procyon-dashboard-v2-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: procyon-dashboard-v2
    k8s.kuboard.cn/workload: procyon-dashboard-v2
    kubernetes.io/ingress.class: "devops-vpn-nginx-internal"
    nginx.com/sticky-cookie-services: "serviceName=kuboard srv_id expires=1h path=/"

spec:
  rules:
    - host: vue-template.npool.top
      http: &http_rules
        paths:
          - path: /
            backend:
              serviceName: procyon-dashboard-v2
              servicePort: 80
    - host: vue-template.xpool.top
      http: *http_rules
    - host: www.vue-template.npool.top
      http: *http_rules
    - host: www.vue-template.xpool.top
      http: *http_rules
