k8s/02-traefik-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: smoketest-webui-v1-treafik-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: smoketest-webui-v1-treafik
    k8s.kuboard.cn/workload: smoketest-webui-v1-treafik
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure, web
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-http-redirect-https@kubernetescrd,
      kube-system-http-redirect-https-testing@kubernetescrd,
      kube-system-common-headers@kubernetescrd

spec:
  tls:
    - hosts:
        - '*.development.npool.top'
        - development.npool.top
      secretName: npool-top-tls
  rules:
    - host: smoketest.development.npool.top
      http: &http_rules
        paths:
          - path: /
            backend:
              serviceName: smoketest-webui-v1
              servicePort: 80
